--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -20,6 +20,11 @@ jobs:
       run: |
         nix flake update
         nix run .#update
+        cd locker
+        if [ ! -d node_modules ]; then
+          yarn
+        fi
+        ./build.sh
     - name: build
       run: |
         nix build .
